[project]
name = "edf-helium-client"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["edf", "helium", "client"]
description = "EDF Helium Client"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
  { name="CERT-EDF", email="cert@edf.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = [
    "edf-helium-core~=3.0",
]


[project.urls]
"Homepage" = "https://github.com/cert-edf/helium"
"Repository" = "https://github.com/cert-edf/helium"
"Bug Tracker" = "https://github.com/cert-edf/helium/issues"


[build-system]
requires = ["setuptools>=78", "setuptools_scm>=8.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["edf_helium_client", "edf_helium_client.*"]


[tool.setuptools_scm]
root = ".."
version_file = "edf_helium_client/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
