[project]
name = "edf-helium-server"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["edf", "helium", "server"]
description = "EDF Helium Server"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
  { name="CERT-EDF", email="cert@edf.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = [
    "edf-helium-core~=3.0",
]


[project.urls]
"Homepage" = "https://github.com/cert-edf/helium"
"Repository" = "https://github.com/cert-edf/helium"
"Bug Tracker" = "https://github.com/cert-edf/helium/issues"


[project.scripts]
helium-server = "edf_helium_server.main:app"
helium-disk-usage = "edf_helium_server.disk_usage:app"
helium-synchronizer = "edf_helium_server.synchronizer:app"


[build-system]
requires = ["setuptools>=78", "setuptools_scm>=8.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["edf_helium_server", "edf_helium_server.*"]


[tool.setuptools_scm]
root = ".."
version_file = "edf_helium_server/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79
